# una-coding-task

./: README.md  manage.py  pyproject.toml
glucose_checker/: asgi.py  settings.py  urls.py  wsgi.py
glucose_checker/api/: apps.py  models.py  serializers.py  urls.py  utils.py  views.py
glucose_checker/api/migrations/: 0001_initial.py
